--- a/app/src/main/res/layout/work_layout.xml
+++ b/app/src/main/res/layout/work_layout.xml
@@ -9,16 +9,19 @@
 
     <Button
         android:id="@+id/prevWord"
+        style="@android:style/Widget.DeviceDefault.Button"
         android:layout_width="170dp"
         android:layout_height="79dp"
         android:text="Previous Word"
+        android:textColor="#000000"
+        android:textColorLink="#0961BA"
         android:textSize="15sp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.066"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/meaning"
-        app:layout_constraintVertical_bias="0.88" />
+        app:layout_constraintVertical_bias="0.753" />
 
     <Button
         android:id="@+id/nextWord"
@@ -31,40 +34,41 @@
         app:layout_constraintHorizontal_bias="0.933"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/meaning"
-        app:layout_constraintVertical_bias="0.888" />
+        app:layout_constraintVertical_bias="0.753" />
 
     <View
         android:id="@+id/divider"
         android:layout_width="409dp"
         android:layout_height="1dp"
-        android:layout_marginTop="100dp"
+        android:layout_marginTop="80dp"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="1.0"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/meaning" />
 
     <TextView
         android:id="@+id/word"
-        android:layout_width="348dp"
-        android:layout_height="208dp"
-        android:layout_marginTop="50dp"
+        android:layout_width="374dp"
+        android:layout_height="240dp"
+        android:layout_marginTop="24dp"
         android:text="TextView"
         android:textColor="#FFFFFF"
         android:textColorHint="#D5CBCB"
         android:textSize="20sp"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.436"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
     <TextView
         android:id="@+id/meaning"
-        android:layout_width="353dp"
-        android:layout_height="210dp"
-        android:layout_marginTop="50dp"
+        android:layout_width="366dp"
+        android:layout_height="258dp"
+        android:layout_marginTop="8dp"
         android:text="TextView"
         android:textColor="#FFFFFF"
         android:textSize="20sp"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.482"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/word" />
 
